# OSMExtruder

./: CMakeLists.txt  CMakeLists.txt.user.EfahdE  README.md
include/: Point3D.h  annotationfilemanager.h  coordsconverter.h  geotiff.h  osmnode.h  osmrelation.h  osmway.h  trianglehelper.h  utilities.h
src/: annotationfilemanager.cpp  compute_slopes.cpp  coordsconverter.cpp  geotiff.cpp  main.cpp  osmnode.cpp  osmrelation.cpp  osmway.cpp  test.cpp  testInPolygon.cpp  trianglehelper.cpp  visualiseCity.cpp  visualise_city.cpp
triangle/: CMakeLists.txt  polyin.1.ele  polyin.1.node  polyin.1.poly  polyin.poly  shewchuk_triangle.cpp  shewchuk_triangle.h  triangle  trianglehelper.cpp  trianglehelper.h  tricall.c
triangle_mesh/: CMakeLists.txt  main.cpp
triangle_mesh/include/: CommonDefinitions.h  Edge.h  Point.h  Triangle.h  TriangleMesh.h  Vertex.h  annotation.h  lineannotation.h  pointannotation.h  surfaceannotation.h
triangle_mesh/src/: Edge.cpp  Triangle.cpp  TriangleMesh.cpp  Vertex.cpp  lineannotation.cpp  pointannotation.cpp  surfaceannotation.cpp  trianglemesh.cpp
